--- a/package.json
+++ b/package.json
@@ -12,7 +12,20 @@
     "dependencies": {
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^6.28.0"
+        "react-router-dom": "^6.28.0",
+        "coffee-script": "^1.12.2",
+        "css-loader": "^0.26.1",
+        "html-webpack-plugin": "^2.26.0",
+        "nib": "^1.1.2",
+        "pug-html-loader": "^1.0.10",
+        "style-loader": "^0.13.1",
+        "stylint": "^1.5.9",
+        "stylint-loader": "^1.0.0",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^2.4.0",
+        "webpack": "^1.14.0",
+        "webpack-dev-server": "^1.16.2",
+        "webpack-merge": "^2.3.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.13.0",
